# email-parser

./: .cspell.json  .gitignore  .phase4-marker  CHANGELOG.md  CLAUDE-DESKTOP.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  D:\Users\alexp\dev\reference\git-merge-guide.md  DEVELOPMENT_SETUP.md  LICENSE  README.md  build_exe.bat  email_parser.spec  email_parser_exe.py  environment.yml  hooks-configuration-fix-summary.md  pyproject.toml  requirements-build.txt  requirements.txt  setup.py  test_complex.eml  test_excel.eml  test_hooks.txt  test_large_2mb.eml  test_malformed.eml  test_malicious_filename.eml  test_missing_headers.eml  test_simple.eml  version_info.txt
archive/: .gitignore_2025-06-22  CHANGELOG_2025-06-21.md  CHANGELOG_md_2025-07-01_week3_completion.md  CLAUDE_2025-07-02.md  CLAUDE_2025-07-05_discrepancy_fix.md  CLAUDE_claude_directory_2025-07-13_1959.md  CLAUDE_md_2025-06-28_feature_start.md  README_2025-06-21_001.md  README_2025-06-22.md  README_2025-06-30.md  README_2025-07-05.md  README_2025-07-05_gemini.md  README_md_2025-06-28_feature_start.md  __init___2025-06-22_001.py  __init___2025-06-28_version_update.py  claude_phase-4-progress_2025-07-14.md  cli_examples_2025-06-22.txt  cli_py_2025-06-28_docx_options.py  config_2025-06-22.py  config_2025-06-28_docx_config.py  default_2025-06-21.yaml  del_project-instructions_2025-06-22.md  del_project_instructions_2025-06-21.yaml  enhanced-email-parser-spec.txt  environment_bak.yml  pdf_conversion_2025-06-22.py  pdf_converter_2025-06-28.py  project_plan_and_phasing_2025-06-30.md  pyproject_2025-06-21.toml  setup_py_2025-07-01_week3_completion.py  test_email_generator_2025-06-21.py
archive_backup/: CHANGELOG_2025-06-22.md  CHANGELOG_md_2025-06-28_feature_start.md  CLAUDE-DESKTOP_2025-07-05.md  CLAUDE-DESKTOP_2025-07-05_discrepancy_fix.md  CLAUDE_2025-06-22.md  CLAUDE_2025-06-22_001.md  CLAUDE_2025-06-25.md  CLAUDE_2025-06-25_001.md  CLAUDE_2025-07-05.md  CLAUDE_2025-07-05_gemini.md  CLAUDE_md_2025-06-28_week1_completion.md  CLAUDE_md_2025-07-01_week3_start.md  CONTRIBUTING_2025-07-02.md  CONTRIBUTING_2025-07-05.md  DEVELOPMENT_SETUP_2025-06-21.md  DEVELOPMENT_SETUP_2025-06-22.md  README_2025-06-21.md  README_2025-06-22_001.md  README_2025-07-02.md  __init___2025-07-01_week3_completion.py  chunking_2025-07-01.py  cli_examples_2025-07-05.txt  default_2025-06-25.yaml  docx_converter_2025-06-30.py  email-parser.yml  email_processor_2025-06-28_docx_integration.py  index_2025-06-21.md  pdf_converter_2025-06-25.py  project-instructions_2025-06-21.md  project-instructions_2025-06-22.md  project-instructions_2025-06-22_001.md  project_plan_and_phasing_2025-06-22.md  project_plan_and_phasing_2025-06-22_001.md  pyproject_toml_2025-06-28_version_update.toml  setup_2025-06-21.py  setup_2025-06-22.py  setup_py_2025-06-28_version_update.py
benchmarks/: pdf_converter_benchmark.py
config/: README.md  default.yaml
docs/: building-executable.md  cli_examples.txt  index.md  interactive-cli-mockups.md  interactive-mode-guide.md  phase-3.5-interactive-cli-design.md  phase-4.5-interactive-file-conversion.md  project_instructions.yaml  project_journal.md
email_parser/: __init__.py  __main__.py  cli.py  processor.py
examples/: basic_parsing.py  batch_processing.py  excel_conversion.py  pdf_conversion.py
final_test_validation/: metadata_5db2850e-bdcb-4fab-b440-afceb4947632_20250701083126.json  metadata_f9be94f4-7174-4b9a-9a3a-01282444a0e6_20250701083213.json
hooks/: hook-email_parser.py
scripts/: README.md  ascii_tree.py  test_email_generator.py  test_phase45_performance.py
test_conversion_output/: simple_test.md
test_emails/: batch_email_1.eml  batch_email_2.eml  batch_email_3.eml
(+115 files in other folders)
