[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_parser"
version = "2.2.0"
description = "Enterprise-grade email processing system with MIME parsing, PDF/DOCX to Markdown conversion via MistralAI OCR, security features, and performance optimization"
readme = "README.md"
authors = [
    {name = "Project Team", email = "team@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.0.0",
    "pypdf2>=3.0.0",
    "pillow>=10.0.0",
    "filetype>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "chardet>=5.0.0",
    "mistralai>=1.5.2",
    "mammoth>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tiktoken>=0.5.0",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
email-parser = "email_parser.cli:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=email_parser --cov-report=html --cov-report=term-missing"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test

[tool.safety]
# Safety configuration for dependency scanning
